admin panel login system done and pages rouutes done

--- a/src/Pages/Auth/auth.scss
+++ b/src/Pages/Auth/auth.scss
@@ -52,13 +52,13 @@
         color: #fff;
       }
     }
-    .bg-img {
-      background-image: url("../../assets/auth/auth.jpg");
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-      height: 500px;
-    }
+    // .bg-img {
+    //   background-image: url("../../assets/auth/auth.jpg");
+    //   background-position: center;
+    //   background-size: cover;
+    //   background-repeat: no-repeat;
+    //   height: 500px;
+    // }
   
     .use-btn {
       border: 1px solid var(--red);
