--- a/src/Pages/Dashboard/index.css
+++ b/src/Pages/Dashboard/index.css
@@ -1,13 +1,13 @@
 .card-head1{
-    background-color:blanchedalmond;
+    background-color:#74bde0;
 }
 
 .card-head2{
-    background-color: aqua;
+    background-color: #4a8db7;
 }
 
 .card-head3{
-    background-color:wheat;
+    background-color:#ab7697;
 }
 
 .card-head5{
