--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #1f5156;
+    background-color: #264a63;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -20,7 +20,7 @@
   }
   
   .nav-logo {
-    color: #f5b921;
+    color: #a1e1fa;
     align-items: center;
     margin-left: 20px;
     cursor: pointer;
@@ -37,7 +37,7 @@
   }
   
   .nav-links {
-    color: #fff;
+    color:#a1e1fa;
     text-decoration: none;
     padding: 0.5rem 1rem;
     height: 100%;
@@ -58,7 +58,8 @@
     height: 3px;
     width: 0;
     background: transparent;
-    transition: width 0.7s ease, background-color 0.5s ease;
+    transition: width 0.7s ease, 
+    background-color 0.5s ease;
   }
   
   .nav-item:hover:after {
@@ -89,14 +90,14 @@
     }
   
     .nav-menu.active {
-      background: #1f5156;
+      background: #a1e1fa;
       left: 0px;
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
     }
     .nav-item .active {
-      color: #ffdd40;
+      color: #1f5156;
       border: none;
     }
     .nav-links {
